# Fat-Cat

./: README.md  _logging.py  base.py  env.txt  pyproject.toml  requirements-full.txt  tool_catalog.py
MCP/: __init__.py
Memory_system/: memory_bridge.py
Watcher_Agent/: Watcher_agent.py  __init__.py  main.py  watcher.md
config/: __init__.py
scripts/: log_utils.py
stage1_agent/: Metacognitive_Analysis_agent.py  Metacognitive_Analysis_agnet.py  __init__.py  main.py  reasoner.md
stage2_agent/: Strategy_Selection_agent.py  main.py  verifier.md
stage2_candidate_agent/: Candidate_Selection_agent.py  __init__.py  main.py  selector.md
stage2_capability_upgrade_agent/: __init__.py  main.py  stage2_capability_upgrade_agent.py  thinking.md
stage3_agent/: Step_agent.py  __init__.py  main.py  step.md
stage4_agent/: Executor_agent.py  __init__.py  executor.md  main.py  sandboxed_code_interpreter.py  tools_bridge.py
strategy_library/: strategy.md  strategy.md.bak-20251218-105636  strategy.md.bak-20251218-111010  strategy.md.bak-20251218-120138
test/: test_capability_upgrade_agent.py  test_capability_workflow.py  test_envelope.py  test_logging.py  test_stage2_capability_upgrade_agent.py  test_strategy_selection_workflow.py
tools/: tool_catalog.md
workflow/: __init__.py  capability_upgrade_workflow.py  finish_form_utils.py  full_pipeline_runner.py
